--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -38,10 +38,8 @@
   .links {
     flex-direction: column;
     align-items: center;
-
-    a {
-      padding: 5px;
-      text-transform: uppercase;
-    }
+    flex: 1;
+    border-top: 1px $highlight-dark solid;
+    border-bottom: 1px $highlight-dark solid;
   }
 }
