--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,14 @@
-$base-theme: #da2177;
+$base-theme: #eb212e;
 $background-dark: #151515;
 $highlight-dark: #252525;
 $background-light: #353535;
 $highlight-light: #454545;
+$color-red: #eb212e;
+$color-yellow: #ffc400;
+$color-blue: #5297d2;
+$color-green: #66b860;
+$color-pink: #f43d80;
+$color-orange: #ff9200;
+$color-grey: #656565;
+$color-white: #b2b5b4;
+$color-mavue: #d473d4;
