--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,32 @@
 @import "./src/styles/theme.scss";
 
 * {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Consolas", "Courier New", "monospace";
   color: $base-theme;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    cursor: pointer;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $background-light;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $highlight-dark;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: $color-yellow;
+  }
+
+  &::-moz-selection {
+    background: $color-orange;
+  }
+  &::selection {
+    background: $color-orange;
+  }
 }
 
 html,
@@ -19,13 +43,21 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0px;
+  margin: 0px 0px 5px 0px;
   font-weight: 100;
   letter-spacing: 2px;
 }
 
 h1 {
-  font-weight: 400;
+  color: $color-orange;
+}
+
+h2 {
+  color: $color-yellow;
+}
+
+p {
+  margin: 0px;
 }
 
 div {
@@ -40,7 +72,7 @@ a {
   color: $highlight-light;
 
   &:hover {
-    color: $base-theme;
+    color: $color-yellow;
   }
 }
 
