--- a/src/components/welcome.scss
+++ b/src/components/welcome.scss
@@ -7,12 +7,15 @@
     flex: 1;
     flex-direction: column;
     padding: 50px;
+    white-space: pre-wrap;
+    overflow-y: scroll;
 
     &.photo {
       flex: 1;
       background: url(../media/photos/gamejam.jpg);
       background-size: cover;
       background-repeat: no-repeat;
+      transition: all 0.3s ease;
 
       a {
         text-align: left;
