--- a/src/components/editor.scss
+++ b/src/components/editor.scss
@@ -2,8 +2,8 @@
 
 :local #editor {
   flex: 1;
-  border-top: 1px $highlight-dark solid;
+  border-top: 1px $color-white solid;
   padding-top: 10px;
   flex-direction: column;
-  color: $highlight-dark;
+  color: $color-white;
 }
