--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,3 +12,39 @@ $color-orange: #ff9200;
 $color-grey: #656565;
 $color-white: #b2b5b4;
 $color-mavue: #d473d4;
+
+.red {
+  color: $color-red;
+}
+
+.yellow {
+  color: $color-yellow;
+}
+
+.blue {
+  color: $color-blue;
+}
+
+.green {
+  color: $color-green;
+}
+
+.pink {
+  color: $color-pink;
+}
+
+.orange {
+  color: $color-orange;
+}
+
+.grey {
+  color: $color-grey;
+}
+
+.white {
+  color: $color-white;
+}
+
+.mavue {
+  color: $color-mavue;
+}
