--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
   }
 
   &::-webkit-scrollbar-track {
-    background: $background-light;
+    background: transparent;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -18,14 +18,16 @@
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background: $color-yellow;
+    background: $color-pink;
   }
 
   &::-moz-selection {
-    background: $color-orange;
+    color: $highlight-dark;
+    background: $color-pink;
   }
   &::selection {
-    background: $color-orange;
+    color: $highlight-dark;
+    background: $color-pink;
   }
 }
 
@@ -33,7 +35,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background: $background-light;
+  background: white;
   overflow: hidden;
 }
 
@@ -49,7 +51,7 @@ h6 {
 }
 
 h1 {
-  color: $color-orange;
+  color: $color-pink;
 }
 
 h2 {
