--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -15,6 +15,14 @@
     height: 80px;
     overflow: hidden;
     background: $background-dark;
+    cursor: pointer;
+
+    &:hover {
+      .profile {
+        border-radius: 0%;
+        transform: scale(2);
+      }
+    }
 
     .profile {
       width: 60px;
@@ -22,11 +30,7 @@
       border-radius: 100%;
       overflow: hidden;
       transition: all 1s ease;
-
-      &:hover {
-        border-radius: 0%;
-        transform: scale(2);
-      }
+      transition-delay: 0.5s;
 
       img {
         width: 100%;
@@ -41,5 +45,47 @@
     flex: 1;
     border-top: 1px $highlight-dark solid;
     border-bottom: 1px $highlight-dark solid;
+  }
+}
+
+.rainbow:hover {
+  animation: rainbow 1s infinite ease;
+}
+
+@keyframes rainbow {
+  0% {
+    background: $color-red;
+  }
+
+  12.5% {
+    background: $color-pink;
+  }
+
+  25% {
+    background: $color-orange;
+  }
+
+  37.5% {
+    background: $color-yellow;
+  }
+
+  50% {
+    background: $color-white;
+  }
+
+  62.5% {
+    background: $color-blue;
+  }
+
+  75% {
+    background: $color-green;
+  }
+
+  87.5% {
+    background: $color-mavue;
+  }
+
+  100% {
+    background: $base-theme;
   }
 }
