--- a/src/components/welcome.scss
+++ b/src/components/welcome.scss
@@ -13,7 +13,7 @@
 
     &.photo {
       flex: 2;
-      background: url(../media/photos/profile.jpg);
+      background: url(../media/photos/gamejam.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       transition: all 0.3s ease;
