--- a/src/components/navItem.scss
+++ b/src/components/navItem.scss
@@ -42,6 +42,10 @@
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
+
+    @media screen and (max-height: 650px) {
+      font-size: 13px;
+    }
   }
 }
 
