--- a/src/components/social.scss
+++ b/src/components/social.scss
@@ -9,9 +9,18 @@
   background: $background-dark;
   position: relative;
 
+  @media screen and (max-height: 500px) {
+    display: none;
+  }
+
   a {
     margin: 5px;
     transition: all 0.5s ease;
+
+    @media screen and (max-height: 768px) {
+      width: 35px !important;
+      height: 35px !important;
+    }
 
     &:hover {
       transform: scale(1.2);
