--- a/src/components/welcome.scss
+++ b/src/components/welcome.scss
@@ -2,6 +2,7 @@
 
 :local #welcome {
   flex: 1;
+  overflow-y: auto;
 
   .column {
     flex: 1;
@@ -17,6 +18,14 @@
       background-size: cover;
       background-repeat: no-repeat;
       transition: all 0.3s ease;
+
+      @media screen and (max-width: 1280px) {
+        flex: 1;
+      }
+
+      @media screen and (max-width: 500px) {
+        display: none;
+      }
 
       a {
         text-align: left;
